# plugin-rust-job-type

./: Makefile  README.md
rust-job-type/: .dockerignore  .racetrackignore  base.Dockerfile  fatman-template.Dockerfile  plugin-manifest.yaml  plugin.py
rust-job-type/rust_wrapper/: Cargo.toml
rust-job-type/rust_wrapper/src/: health.rs  main.rs  server.rs
rust-job-type/rust_wrapper/src/handler/: mod.rs
sample-rust-function/: fatman.yaml  mod.rs
