[package]
name = "rust_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.137", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
serde_json = "1.0.81"
